[tool.poetry]
name = "dismake"
version = "1.0.0"
description = "Dismake is a powerful Discord HTTP interactions API wrapper designed for Python developers. Whether you're using Flask, Django, or any other Python web framework, Dismake has you covered."
authors = ["Pranoy Majumdar <officialpranoy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"
colorlog = "^6.7.0"
pynacl = "^1.5.0"
typing-extensions = "^4.7.1"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/Apptic-Development/dismake"

